[package]
name = "dna_ode_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"
nalgebra = "0.32.1"
ode_solvers = "0.3.7"
plotters = "0.3.4"
polars = {version="0.26.1", features=["lazy", "parquet", "strings", "ndarray"]}
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.6.1"
